<resources>
    <string name="app_name">RecyclerviewDemo</string>
    <string name="listview">ListView</string>
    <string name="gridView">GridView</string>
    <string name="horizontalgridview">HorizontalGridView</string>
    <string name="staggeredgridview">StaggeredGridView</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
</resources>
