<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@mipmap/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_listView"
        android:orderInCategory="100"
        android:title="@string/listview" />

    <item
        android:id="@+id/action_gridView"
        android:orderInCategory="100"
        android:title="@string/gridView" />

    <item
        android:id="@+id/action_hor_gridView"
        android:orderInCategory="100"
        android:title="@string/horizontalgridview" />

    <item
        android:id="@+id/action_staggered_gridView"
        android:orderInCategory="100"
        android:title="@string/staggeredgridview" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/settings" />
</menu>